# movie-collection

./: .gitignore  Cargo.toml  Shuttle.toml  movie-collections.http
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs  lib.rs
api/lib/src/film_repository/: mod.rs
api/lib/src/postgres_film_repository/: mod.rs
api/shuttle/: .gitignore  Cargo.toml
api/shuttle/src/: main.rs
desktop/: .gitignore  build.gradle.kts  settings.gradle.kts
desktop/src/main/kotlin/: Main.kt
desktop/src/main/kotlin/component/: CreateFilmDialog.kt  FilmCard.kt  ModifyFilmDialog.kt
desktop/src/main/kotlin/di/: module.kt
desktop/src/main/kotlin/modal/: CreateFilm.kt  Film.kt
desktop/src/main/kotlin/repository/: FilmRepository.kt  IFilmRepository.kt
desktop/src/main/kotlin/viewmodel/: MainViewModel.kt
front/: index.html  package-lock.json  package.json
front/src/: App.svelte  main.ts
front/src-tauri/: Cargo.toml  tauri.conf.json
front/src/api/: film_collection.ts
front/src/lib/: FilmCard.svelte  FilmModal.svelte
front/src/model/: CreateFilm.ts  Film.ts
front/src/repository/: FilmRepository.ts
shared/: Cargo.toml
shared/src/: film_model.rs  lib.rs
static/: index.html
