[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18",features= ["macros"] }
tokio = "1.28.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

sqlx = { version = "0.6.1", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "json" ] }

