[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.18", features = ["macros", "headers"] }
tokio = { version = "1.28.2", features = ["macros"] }
tower = "0.4.13"
hyper = "0.14.27"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sqlx = { version = "0.6.1", default-features = false, features = [
    "runtime-actix-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json"
] }

serde_json = "1.0.103"
serde = { version = "1.0.174", features = ["derive"] }
uuid = {version ="1.4.1", features=["serde", "v4","js"]}
chrono =  {version="0.4.26",features=["serde"]}

shared = { path = "../../shared",features= ["backend"] }