[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.18",features= ["macros"] }
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
tokio = "1.28.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
sqlx = { version = "0.6.1", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "json" ] }
