[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.18",features= ["macros"] }
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
tokio = "1.28.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.0", features = ["fs"] }
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
shuttle-static-folder = "0.21.0"
sqlx = { version = "0.6.1", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "json" ] }


api-lib = { path = "../lib" }